Replace @PostConstruct and @PreDestroy